z-index fixed

--- a/src/core/views/reusables/Map/Map.module.css
+++ b/src/core/views/reusables/Map/Map.module.css
@@ -6,6 +6,7 @@
 .map {
   width: 100%;
   position: relative;
+  z-index: 10;
 }
 .customTooltip {
   font-size: var(--spacing-small);
